# gbase

./: .clang-format  .gitignore  .gitmodules  Doxyfile  README.md  build.ps1  galgorithms.hpp  gbasictypes.hpp  gexceptions.hpp  glogger.hpp  gprinttools.hpp  gtypetools.hpp  gvector.hpp  meson.build
docs/: _r_e_a_d_m_e_8md.html  annotated.html  classes.html  classgbase_1_1_g_dictionary-members.html  classgbase_1_1_g_dictionary.html  classgbase_1_1_g_dictionary__coll__graph.map  classgbase_1_1_g_dictionary__coll__graph.md5  classgbase_1_1_g_dictionary__inherit__graph.md5  classgbase_1_1_g_direction3_d-members.html  classgbase_1_1_g_direction3_d.html  classgbase_1_1_g_direction3_d__coll__graph.map  classgbase_1_1_g_direction3_d__coll__graph.md5  classgbase_1_1_g_enumerate-members.html  classgbase_1_1_g_enumerate.html  classgbase_1_1_g_enumerate_1_1iterator-members.html  classgbase_1_1_g_enumerate_1_1iterator.html  classgbase_1_1_g_enumerate_1_1iterator__coll__graph.map  classgbase_1_1_g_enumerate_1_1iterator__coll__graph.md5  classgbase_1_1_g_enumerate__coll__graph.map  classgbase_1_1_g_enumerate__coll__graph.md5  classgbase_1_1_g_enumerate__inherit__graph.map  classgbase_1_1_g_local_log_filter-members.html  classgbase_1_1_g_local_log_filter.html  classgbase_1_1_g_local_log_filter__coll__graph.map  classgbase_1_1_g_local_log_filter__coll__graph.md5  classgbase_1_1_g_local_log_level-members.html  classgbase_1_1_g_local_log_level.html  classgbase_1_1_g_local_log_level__coll__graph.map  classgbase_1_1_g_local_log_level__coll__graph.md5  classgbase_1_1_g_logger-members.html  classgbase_1_1_g_logger.html  classgbase_1_1_g_logger__coll__graph.map  classgbase_1_1_g_logger__coll__graph.md5  classgbase_1_1_g_set-members.html  classgbase_1_1_g_set.html  classgbase_1_1_g_set__coll__graph.map  classgbase_1_1_g_set__inherit__graph.md5  classgbase_1_1_g_vector-members.html  classgbase_1_1_g_vector.html  classgbase_1_1_g_vector__coll__graph.md5  (+225 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_6.js  (+64 more)
src/: g_algorithms.hpp  g_circular_buffers.hpp  g_connections copy.hpp  g_connections.hpp  g_dictionary.hpp  g_enumerate.hpp  g_exceptions.hpp  g_files.hpp  g_geometry.hpp  g_logger.hpp  g_print_tools.hpp  g_ranges.hpp  g_set.hpp  g_signal_processing.hpp  g_string_tools.hpp  g_time.hpp  g_type_tools.hpp  g_vector.hpp  g_zipper.hpp  galgorithms.hpp  gbasictypes.hpp  gdictionary.hpp  genumerate.hpp  gexceptions.hpp  ggeometry.hpp  glogger.hpp  gprinttools.hpp  gramp.hpp  grange.hpp  granges.hpp  gset.hpp  gsignal.hpp  gstringtools.hpp  gtypetools.hpp  gvector.hpp  gzipper.hpp
test/: g_algorithms_test.cpp  g_circular_buffers_test.cpp  g_connections_test.cpp  g_dictionary_test.cpp  g_enumerate_test.cpp  g_files_test.cpp  g_geometry_test.cpp  g_ranges_test.cpp  g_set_test.cpp  g_time_test.cpp  g_vector_test.cpp  g_zipper_test.cpp  galgorithmstest.cpp  gdictionarytest.cpp  genumeratetest.cpp  ggeometrytest.cpp  gramptest.cpp  grangestest.cpp  gsettest.cpp  gvectortest.cpp  gzippertest.cpp  run_tests.cpp  runtests.cpp
